--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <div class="footer__address">
                     <a class="link logo footer__logo" href="./index.html">Web<span class="logo--footer">Studio</span></a>
                     <address class="footer-address">
-                        <ul class="list address__list">
+                        <ul class="list footer-address__list">
                             <li class="footer-address__item"> <a class="link footer-address__link" href="https://goo.gl/maps/w4182wPYShXfGa5f7"
                                     target="_blank" rel="noopener noreferrer nofollow"> г. Киев, пр-т Леси Украинки, 26 </a></li>
                             <li class="footer-address__item"> <a class="link footer-address__link"
