--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
             <div class="container header__container">
                 <nav class="header__nav">
                     <a class="link logo" href="./index.html"> Web<span class="logo--header">Studio</span></a>
+                    <button type="button" class="burger__button-menu">
+                        <svg class="burger__menu-icon" width="40" height="40">
+                            <use href="./image/burger.svg#icon-burger-menu"></use>
+                        </svg>
+                        <svg class="burger__close-icon" width="40" height="40">
+                            <use href="./image/burger.svg#icon-burger-close"></use>
+                        </svg>
+                    </button>
                     <ul class="list header__pages-list">
                         <li class="header__pages-item"> <a class="link header__pages-link header__pages-link--active" href="./index.html">Студия</a> </li>
                         <li class="header__pages-item"> <a class="link header__pages-link" href="./portfolio.html">Портфолио</a> </li>
