--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,17 @@
     <!-- Заголовок-->
     <header class="header">
         <div class="container header__container">
+            <a class="link logo" href="./index.html"> Web<span class="logo--header">Studio</span></a>
             <nav class="header__nav">
-                <a class="link logo" href="./index.html"> Web<span class="logo--header">Studio</span></a>
+                
+                <button type="button" class="burger__button-menu">
+                    <svg class="burger__menu-icon" width="40" height="40">
+                        <use href="./image/burger.svg#icon-burger-menu"></use>
+                    </svg>
+                    <svg class="burger__close-icon" width="40" height="40">
+                        <use href="./image/burger.svg#icon-burger-close"></use>
+                    </svg>
+                </button>
                 <ul class="list header__pages-list">
                     <li class="header__pages-item"> <a class="link header__pages-link" href="./index.html">Студия</a> </li>
                     <li class="header__pages-item"> <a class="link header__pages-link header__pages-link--active" href="./portfolio.html">Портфолио</a> </li>
@@ -66,7 +75,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_2.jpg" alt="Дизайн постера" width="370" height="294">
@@ -81,7 +90,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_3.jpg" alt="Приложение Seafood" width="370" height="294">
@@ -96,7 +105,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_4.jpg" alt="Проект Prime" width="370" height="294">
@@ -111,7 +120,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_5.jpg" alt="Приложение Boxes" width="370" height="294">
@@ -126,7 +135,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" height="294">
@@ -141,7 +150,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_7.jpg" alt="Дизайн издания Limited Edition" width="370" height="294">
@@ -156,7 +165,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_8.jpg" alt="Проект LAB" width="370" height="294">
@@ -171,7 +180,7 @@
                         </a>
                     </li>
 
-                    <li class="card-set__item service-list__item">
+                    <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                                 <img src="./image/portfolio/2_9.jpg" alt="Приложениее Growing Business" width="370" height="294">
