--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 
                 
-                <button type="button" class="burger__button-menu menu-button" data-menu-button>
+                <button type="button" class="burger__button-menu" data-menu-button>
                     <svg class="burger__menu-icon" width="40" height="40">
                         <use class="burger__menu" href="./image/burger.svg#icon-burger-menu"></use>
                         <use class="burger__close" href="./image/burger.svg#icon-burger-close"></use>
