--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,10 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_1.jpg" alt="Веб-сайт Технокряк" width="370" height="294">
+                                <img srcset="./image/portfolio/port-1_1x.jpg 450w, ./image/portfolio/port-1_2x.jpg 900w"
+                                  src="./image/portfolio/port-1_1x.jpg"
+                                  alt="Веб-сайт Технокряк"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                         сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -94,7 +97,9 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_2.jpg" alt="Дизайн постера" width="370" height="294">
+                                <img srcset="./image/portfolio/port-2_1x.jpg 450w, ./image/portfolio/port-2_2x.jpg 900w"
+                                  src="./image/portfolio/port-2_1x.jpg" alt="Дизайн постера"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -109,7 +114,10 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_3.jpg" alt="Приложение Seafood" width="370" height="294">
+                                <img srcset="./image/portfolio/port-3_1x.jpg 450w, ./image/portfolio/port-3_2x.jpg 900w"
+                                  src="./image/portfolio/port-3_1x.jpg"
+                                  alt="Приложение Seafood"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -124,7 +132,9 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_4.jpg" alt="Проект Prime" width="370" height="294">
+                                <img srcset="./image/portfolio/port-4_1x.jpg 450w, ./image/portfolio/port-4_2x.jpg 900w"
+                                  src="./image/portfolio/port-4_1x.jpg" alt="Проект Prime"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -139,7 +149,9 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_5.jpg" alt="Приложение Boxes" width="370" height="294">
+                                <img srcset="./image/portfolio/port-5_1x.jpg 450w, ./image/portfolio/port-5_2x.jpg 900w"
+                                  src="./image/portfolio/port-5_1x.jpg" alt="Приложение Boxes"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -154,7 +166,10 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" height="294">
+                                <img srcset="./image/portfolio/port6_1x.jpg 450w, ./image/portfolio/port-6_2x.jpg 900w"
+                                  src="./image/portfolio/port6_1x.jpg"
+                                  alt="Веб-сайт Inspiration has no Borders"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -169,7 +184,10 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_7.jpg" alt="Дизайн издания Limited Edition" width="370" height="294">
+                                <img srcset="./image/portfolio/port7_1x.jpg 450w, ./image/portfolio/port-7_2x.jpg 900w"
+                                  src="./image/portfolio/port7_1x.jpg"
+                                  alt="Дизайн издания Limited Edition"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -184,7 +202,10 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_8.jpg" alt="Проект LAB" width="370" height="294">
+                                <img srcset="./image/portfolio/port8_1x.jpg 450w, ./image/portfolio/port-8_2x.jpg 900w"
+                                  src="./image/portfolio/port8_1x.jpg"
+                                  alt="Проект LAB"
+                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -199,7 +220,10 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img src="./image/portfolio/2_9.jpg" alt="Приложениее Growing Business" width="370" height="294">
+                                <img srcset="./image/portfolio/port-9_1x.jpg 450w, ./image/portfolio/port-9_2x.jpg 900w"
+                                src="./image/portfolio/port-9_1x.jpg"
+                                alt="Приложениее Growing Business"
+                                sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
