--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
                     <h2 class="section__title">Чем мы занимаемся</h2>
                     <ul class="list examples-list card-set">
                         <li class="card-set__item examples__item">
-                            <img src="./image/1.jpg" alt="Программирование" width="370" height="294">
+                            <img srcset="./image/index/ex-1_1x.jpg 1x, ./image/index/ex-1_2x.jpg 2x" src="./image/index/ex-1_1x.jpg" alt="Программирование" width="370" height="294">
                             <div class="examples__wrap">
                                 <h3 class="examples__title">Десктопные приложения</h3>
                             </div>
                         </li>
                         <li class="card-set__item examples__item">
-                            <img src="./image/2.jpg" alt="Приложения для смартфонов" width="370" height="294">
+                            <img srcset="./image/index/ex-2_1x.jpg 1x, ./image/index/ex-2_2x.jpg 2x" src="./image/index/ex-2_1x.jpg" alt="Приложения для смартфонов" width="370" height="294">
                             <div class="examples__wrap">
                                 <h3 class="examples__title">Мобильные приложения</h3>
                             </div>
                         </li>
                         <li class="card-set__item examples__item">
-                            <img src="./image/3.jpg" alt="Дизайн" width="370" height="294">
+                            <img srcset="./image/index/ex-3_1x.jpg 1x, ./image/index/ex-3_2x.jpg 2x" src="./image/index/ex-3_1x.jpg" alt="Дизайн" width="370" height="294">
                             <div class="examples__wrap">
                                 <h3 class="examples__title">Дизайнерские решения</h3>
                             </div>
@@ -148,7 +148,10 @@
                     <h2 class="section__title">Наша команда</h2>
                     <ul class="list team__list card-set">
                         <li class="card-set__item team__item">
-                            <img src="./image/mem_1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
+                            <img srcset="./image/index/member-1_450_1x.jpg 450w, ./image/index/member-1_900_2x.jpg 900w" 
+                              src="./image/index/member-1_450_1x.jpg"
+                              alt="Фото Игоря Демьяненко"
+                              sizes="(min-width: 769px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                             <div class="team__content">
                                 <h3 class="team__member">Игорь Демьяненко</h3>
                                 <p class="team__job" lang="en">Product Designer</p>
@@ -178,7 +181,10 @@
                             </div>                            
                         </li>
                         <li class="card-set__item team__item">
-                            <img src="./image/mem_2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
+                            <img srcset="./image/index/member-2_450_1x.jpg 450w, ./image/index/member-2_900_2x.jpg 900w"
+                              src="./image/index/member-2_450_1x.jpg"
+                              alt="Фото Ольги Репиной"
+                              sizes="(min-width: 769px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                             <div class="team__content">
                                 <h3 class="team__member">Ольга Репина</h3>
                                 <p class="team__job" lang="en">Frontend Developer</p>
@@ -207,7 +213,10 @@
                             </div>
                         </li>
                         <li class="card-set__item team__item">
-                            <img src="./image/mem_3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
+                            <img srcset="./image/index/member-3_450_1x.jpg 450w, ./image/index/member-3_900_2x.jpg 900w"
+                              src="./image/index/member-3_450_1x.jpg"
+                              alt="Фото Николая Тарасова"
+                              sizes="(min-width: 769px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                             <div class="team__content">
                                 <h3 class="team__member">Николай Тарасов</h3>
                                 <p class="team__job" lang="en">Marketing</p>
@@ -236,7 +245,9 @@
                             </div>
                         </li>
                         <li class="card-set__item team__item">
-                            <img src="./image/mem_4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
+                            <img srcset="./image/index/member-4_450_1x.jpg 450w, ./image/index/member-4_900_2x.jpg 900w"
+                              src="./image/index/member-4_450_1x.jpg" alt="Фото Михаила Ермакова"
+                              sizes="(min-width: 769px) 25vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
                             <div class="team__content">
                                 <h3 class="team__member">Михаил Ермаков</h3>
                                 <p class="team__job" lang="en">UI Designer</p>
