--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                     <ul class="list team__list card-set">
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-1_mob_1x.jpg 1x, ./image/index/member-1_mob_2x.jpg 2x" media="(max-width: 480px)">
-                            <source srcset="./image/index/member-1_tab_1x.jpg 1x, ./image/index/member-1_tab_2x.jpg 2x" media="(min-width: 481px)">
-                            <source srcset="./image/index/member-1_pc_1x.jpg 1x, ./image/index/member-1_pc_2x.jpg 2x" media="(min-width: 769px)">
+                            <source srcset="./image/index/member-1_mob_1x.jpg 1x, ./image/index/member-1_mob_2x.jpg 2x">
+                            <source srcset="./image/index/member-1_tab_1x.jpg 1x, ./image/index/member-1_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-1_pc_1x.jpg 1x, ./image/index/member-1_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-1_mob_1x.jpg" alt="Фото Игоря Демьяненко">
                           </picture>
                             <div class="team__content">
@@ -184,11 +184,9 @@
                         </li>
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-2_mob_1x.jpg 1x, ./image/index/member-2_mob_2x.jpg 2x"
-                              media="(max-width: 480px)">
-                            <source srcset="./image/index/member-2_tab_1x.jpg 1x, ./image/index/member-2_tab_2x.jpg 2x"
-                              media="(min-width: 481px)">
-                            <source srcset="./image/index/member-2_pc_1x.jpg 1x, ./image/index/member-2_pc_2x.jpg 2x" media="(min-width: 769px)">
+                            <source srcset="./image/index/member-2_mob_1x.jpg 1x, ./image/index/member-2_mob_2x.jpg 2x">
+                            <source srcset="./image/index/member-2_tab_1x.jpg 1x, ./image/index/member-2_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-2_pc_1x.jpg 1x, ./image/index/member-2_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-2_mob_1x.jpg" alt="Фото Ольги Репиной">
                           </picture>
                             <div class="team__content">
@@ -220,11 +218,9 @@
                         </li>
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-3_mob_1x.jpg 1x, ./image/index/member-3_mob_2x.jpg 2x"
-                              media="(max-width: 480px)">
-                            <source srcset="./image/index/member-3_tab_1x.jpg 1x, ./image/index/member-3_tab_2x.jpg 2x"
-                              media="(min-width: 481px)">
-                            <source srcset="./image/index/member-3_pc_1x.jpg 1x, ./image/index/member-3_pc_2x.jpg 2x" media="(min-width: 769px)">
+                            <source srcset="./image/index/member-3_mob_1x.jpg 1x, ./image/index/member-3_mob_2x.jpg 2x">
+                            <source srcset="./image/index/member-3_tab_1x.jpg 1x, ./image/index/member-3_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-3_pc_1x.jpg 1x, ./image/index/member-3_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-3_mob_1x.jpg" alt="Фото Николая Тарасова">
                           </picture>
                             
@@ -257,11 +253,9 @@
                         </li>
                         <li class="card-set__item team__item">
                           <picture>
-                            <source srcset="./image/index/member-4_mob_1x.jpg 1x, ./image/index/member-4_mob_2x.jpg 2x"
-                              media="(max-width: 480px)">
-                            <source srcset="./image/index/member-4_tab_1x.jpg 1x, ./image/index/member-4_tab_2x.jpg 2x"
-                              media="(min-width: 481px)">
-                            <source srcset="./image/index/member-4_pc_1x.jpg 1x, ./image/index/member-4_pc_2x.jpg 2x" media="(min-width: 769px)">
+                            <source srcset="./image/index/member-4_mob_1x.jpg 1x, ./image/index/member-4_mob_2x.jpg 2x">
+                            <source srcset="./image/index/member-4_tab_1x.jpg 1x, ./image/index/member-4_tab_2x.jpg 2x" media="(min-width: 768px)">
+                            <source srcset="./image/index/member-4_pc_1x.jpg 1x, ./image/index/member-4_pc_2x.jpg 2x" media="(min-width: 1200px)">
                             <img src="./image/index/member-4_mob_1x.jpg" alt="Фото Михаила Ермакова">
                           </picture>
                             
