--- a/portfolio.html
+++ b/portfolio.html
@@ -86,11 +86,11 @@
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
                               <picture>
-                                <source srcset="./image/portfolio/port-1_mob_1x.jpg 1x, ./image/portfolio/port-1_mob_1x.jpg 2x" type="image">
+                                <source srcset="./image/portfolio/port-1_mob_1x.jpg 1x, ./image/portfolio/port-1_mob_1x.jpg 2x" type="image/jpeg">
                                 <source srcset="./image/portfolio/port-1_tab_1x.jpg 1x, ./image/portfolio/port-1_tab_1x.jpg 2x"
-                                  media="(min-width: 768px)" type="image">
+                                  media="(min-width: 768px)" type="image/jpeg">
                                 <source srcset="./image/portfolio/port-1_pc_1x.jpg 1x, ./image/portfolio/port-1_pc_1x.jpg 2x"
-                                  media="(min-width: 1200px)" type="image">
+                                  media="(min-width: 1200px)" type="image/jpeg">
                                 <img src="./image/portfolio/port-1_mob_1x.jpg" alt="Веб-сайт Технокряк"
                                 width="450" height="294">
                               </picture>
