--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                         <use class="burger__close" href="./image/burger.svg#icon-burger-close"></use>
                     </svg>
                 </button>
-                <script src="./js/mobile-menu.js"></script>
             </div>
         </header>
         <main>
@@ -160,7 +159,7 @@
                             <source srcset="./image/index/member-1_mob_1x.jpg 1x, ./image/index/member-1_mob_2x.jpg 2x" media="(max-width: 767px)">
                             <source srcset="./image/index/member-1_tab_1x.jpg 1x, ./image/index/member-1_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                             <source srcset="./image/index/member-1_pc_1x.jpg 1x, ./image/index/member-1_pc_2x.jpg 2x" media="(min-width: 1200px)">
-                            <img src="./image/index/member-1_mob_1x.jpg" alt="Фото Игоря Демьяненко">
+                            <img src="./image/index/member-1_mob_1x.jpg" alt="Фото Игоря Демьяненко" width="450" height="460">
                           </picture>
                             <div class="team__content">
                                 <h3 class="team__member">Игорь Демьяненко</h3>
@@ -195,7 +194,7 @@
                             <source srcset="./image/index/member-2_mob_1x.jpg 1x, ./image/index/member-2_mob_2x.jpg 2x" media="(max-width: 767px)">
                             <source srcset="./image/index/member-2_tab_1x.jpg 1x, ./image/index/member-2_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                             <source srcset="./image/index/member-2_pc_1x.jpg 1x, ./image/index/member-2_pc_2x.jpg 2x" media="(min-width: 1200px)">
-                            <img src="./image/index/member-2_mob_1x.jpg" alt="Фото Ольги Репиной">
+                            <img src="./image/index/member-2_mob_1x.jpg" alt="Фото Ольги Репиной" width="450" height="460">
                           </picture>
                             <div class="team__content">
                                 <h3 class="team__member">Ольга Репина</h3>
@@ -229,7 +228,7 @@
                             <source srcset="./image/index/member-3_mob_1x.jpg 1x, ./image/index/member-3_mob_2x.jpg 2x" media="(max-width: 767px)">
                             <source srcset="./image/index/member-3_tab_1x.jpg 1x, ./image/index/member-3_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)">
                             <source srcset="./image/index/member-3_pc_1x.jpg 1x, ./image/index/member-3_pc_2x.jpg 2x" media="(min-width: 1200px)">
-                            <img src="./image/index/member-3_mob_1x.jpg" alt="Фото Николая Тарасова">
+                            <img src="./image/index/member-3_mob_1x.jpg" alt="Фото Николая Тарасова" width="450" height="460">
                           </picture>
                             
                             <div class="team__content">
@@ -264,7 +263,7 @@
                             <source srcset="./image/index/member-4_mob_1x.jpg 1x, ./image/index/member-4_mob_2x.jpg 2x" media="(max-width: 767px)">
                             <source srcset="./image/index/member-4_tab_1x.jpg 1x, ./image/index/member-4_tab_2x.jpg 2x" media="(min-width: 768px) and (max-width:1199px)">
                             <source srcset="./image/index/member-4_pc_1x.jpg 1x, ./image/index/member-4_pc_2x.jpg 2x" media="(min-width: 1200px)">
-                            <img src="./image/index/member-4_mob_1x.jpg" alt="Фото Михаила Ермакова">
+                            <img src="./image/index/member-4_mob_1x.jpg" alt="Фото Михаила Ермакова" width="450" height="460">
                           </picture>
                             
                             <div class="team__content">
@@ -445,5 +444,6 @@
             </div>
         </div>     
         <script src="./js/modal.js"></script>
+        <script src="./js/mobile-menu.js"></script>
     </body>
 </html>
